--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CodeSync CI
+name: Nexio CI
 on:
   push:
     branches: ["main"]
@@ -56,4 +56,4 @@ jobs:
         run: bash ./scripts/run-tests.sh
 
       - name: Build
-        run: go build -o csync ./cmd/csync
+        run: go build -o nexio ./cmd/nexio
